--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
     font-family: Arial, sans-serif;
     font-size: 18px;
     line-height: 1.5;
-    color: white;
+    color: black;
     background: url('iowa-map.png') no-repeat center center fixed;
     background-size: cover;
     filter: hue-rotate(240deg);
