--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
     font-size: 18px;
     line-height: 1.5;
     color: black;
-    background: url('iowa-map.png') no-repeat center center fixed;
+    background: url('map.png') no-repeat center center fixed;
     background-size: cover;
     filter: hue-rotate(240deg);
 }
